--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,5 @@ VIEWPORT_HEIGHT=1080
 # Page load timeout in milliseconds
 PAGE_LOAD_TIMEOUT=60000
 
-# Content stabilization delay in milliseconds
-CONTENT_STABILIZATION_DELAY=3000
+# Browser headless mode (true for CI environments, false for development)
+HEADLESS=false
