--- a/package.json
+++ b/package.json
@@ -1,26 +1,25 @@
 {
-  "name": "yumemi-openhand-book-archive",
+  "name": "yumemi-open-handbook-archive",
   "version": "1.0.0",
   "type": "module",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "archive": "tsx src/entrypoint.ts",
+    "dev:archive": "tsx src/entrypoint.ts",
     "dev": "tsx src/dev.ts",
     "build": "tsc",
-    "start": "node dist/main.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/entrypoint.js"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "fa0311",
+  "license": "MIT",
   "packageManager": "pnpm@10.14.0",
   "dependencies": {
     "cheerio": "^1.1.2",
     "dotenv": "^16.4.7",
     "puppeteer": "^24.31.0",
+    "sanitize-filename": "^1.6.3",
     "winston": "^3.18.3",
-    "zod": "^3.24.1"
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.7",
